DEVAS-1376 fix text alignment

--- a/assembl/static2/css/components/surveyAdmin.scss
+++ b/assembl/static2/css/components/surveyAdmin.scss
@@ -1,14 +1,16 @@
 .survey-admin {
   .survey-admin-export-section {
-    text-align: center;
+    .admin-content {
+      text-align: center;
 
-    .form-group {
-      text-align: left;
-      display: inline-block;
+      .form-group {
+        text-align: left;
+        display: inline-block;
 
-      .export-language-dropdown {
-        margin-top: 20px;
-        position: absolute;
+        .export-language-dropdown {
+          margin-top: 20px;
+          position: absolute;
+        }
       }
     }
   }
